--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "typescript": "^5.3.0",
+    "typescript": "~5.6.0",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.25",
+    "vue-tsc": "^2.1.0",
     "sass": "^1.69.5",
     "@types/node": "^20.10.0"
   }
