--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,10 @@ jobs:
         with:
           go-version: '1.22'
 
+      - name: Download Go dependencies
+        working-directory: backend
+        run: go mod tidy
+
       - name: Build binaries
         run: |
           VERSION=${GITHUB_REF#refs/tags/}
