fix: v1.2.9 - 更换仓库为 CNYuns/yui，纯 Go SQLite 驱动

--- a/y-ui.service
+++ b/y-ui.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Y-UI - Xray Web Management Panel
-Documentation=https://github.com/CNYuns/Yun
+Documentation=https://github.com/CNYuns/yui
 After=network.target network-online.target
 Wants=network-online.target
 
